--- a/pasteleria/stylepedido.css
+++ b/pasteleria/stylepedido.css
@@ -7,7 +7,7 @@
 
 body {
   
-  background-color: #FBF8F1;
+  background-color: #FFDD4A;
   
   display: flex;
   align-items: center;
@@ -70,4 +70,82 @@ h1 {
     background-size: 50%;
     background-position: 0 0;
   }
+}
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 15vmin;
+  line-height: 18vmin;
+}
+
+h3 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 10vmin;
+  line-height: 15vmin;
+}
+
+form {
+
+  font-family: 'Poppins', sans-serif;
+  font-size: 5vmin;
+  line-height: 10vmin;
+  margin: 0 auto; /* Centramos el formulario */
+  width: 1000px;   /* Sin ancho no podemos centrar el formulario */
+  background-color: #FFFFFF ; /* Color para el formulario */
+  padding: 2px; /* separamos los bordes del form del resto de elementos */
+  border-radius: 10px; /* Redondeamos los bordes del form */
+}
+
+input, textarea {
+  padding: 5px; /* Separamos la letra del interior (contenido) en los inputs de los bordes */
+}
+
+label {
+  display: contents; /* Ahora los inputs quedan debajo de los label */
+  padding: 5px; /* Separando espacios internos */
+}
+
+.btn{
+  margin-top: 20px; /* Damos un margen individual para el contenedor del botón */
+}
+
+/*BOTONES*/
+
+button {
+  --border: 5px;    
+  --slant: 0.7em;   
+  --color: #8ec1c7; 
+  
+  font-size: 35px;
+  padding: 0.4em 1.2em;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  color: var(--color);
+  background: 
+     linear-gradient(to bottom left,var(--color)  50%,#0000 50.1%) top right,
+     linear-gradient(to top   right,var(--color)  50%,#0000 50.1%) bottom left;
+  background-size: calc(var(--slant) + 1.3*var(--border)) calc(var(--slant) + 1.3*var(--border));
+  background-repeat: no-repeat;
+  box-shadow:
+    0 0 0 200px inset var(--s,#0000),
+    0 0 0 var(--border) inset var(--color);
+  clip-path: 
+      polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant),
+              100% 100%, var(--slant) 100%,0 calc(100% - var(--slant))
+             );
+  transition: color var(--t,0.3s), background-size 0.3s;
+}
+button:hover,
+button:active{
+  background-size: 100% 100%;
+  color: #fff;
+  --t: 0.2s 0.1s;
+}
+button:focus-visible {
+  outline-offset: calc(-1*var(--border));
+  outline: var(--border) solid #000a;
+}
+button:active {
+  --s: #0005;
+  transition: none;
 }
